fix: overlap

--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -3,7 +3,6 @@
 	overflow: hidden;
 	box-sizing: border-box;
 	background: #fff;
-	margin: 0 10px;
 	transition: all  ease-in-out 0.5s;
 }
 
@@ -15,7 +14,7 @@
 	0px 175px 105px 0px rgba(0, 0, 0, 0.05),
 	0px 311px 124px 0px rgba(0, 0, 0, 0.01),
 	0px 486px 136px 0px rgba(0, 0, 0, 0);
-  margin: 0 -10px;
+  margin: 0 -20px;
 	z-index: 1;
 }
 
