--- a/src/components/Sections/Main/ProductsWithScroll/ProductsWithScroll.module.css
+++ b/src/components/Sections/Main/ProductsWithScroll/ProductsWithScroll.module.css
@@ -7,6 +7,7 @@
 	overflow-y: hidden;
 	scrollbar-width: none;
 	list-style: none;
+	gap: 20px;
 }
 
 .containerFastDelivery {
